# nn_ssm

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: compare_speed.yaml  create_ssm_database.yaml  create_ssm_database_distance.yaml  create_ssm_database_distance_single.yaml  create_ssm_database_distance_ur10e.yaml  create_ssm_database_scaling_simple.yaml  create_ssm_database_ur10e.yaml  nn_test.yaml  nn_test_speed.yaml  prova.yaml  test_nn_saving.yaml
include/nn_ssm/neural_network/: feedforward_nn.h  neural_network.h
include/nn_ssm/neural_networks/: neural_network.h  util.h
include/nn_ssm/ssm15066_estimators/: ssm15066_estimatorNN.h
launch/: compare_speed.launch  create_ssm_database.launch  create_ssm_database2.launch  create_ssm_dataset.launch  create_ssm_dataset_connection _ur10e.launch  create_ssm_dataset_connection.launch  create_ssm_dataset_distance.launch  create_ssm_dataset_distance_single.launch  create_ssm_dataset_distance_ur10e.launch  create_ssm_dataset_scaling_simple.launch  nn_test.launch  nn_test_speed.launch  prova.launch
scripts/: check_test_speed.py  plot_train_statistics.py  save_model_to_yaml.py  test.py  test_nn_saving.py  test_speed.py  test_weights_saving.py  toch2keras.py  toch2tensor.py  train.py  train_1_output.py  train_connection.py  train_dq.py  train_dq_1_output.py  train_loop.py  train_loop_complete.py  train_net.py
scripts/data/: 10k_nn_ssm_complete.pt  1k_nn_ssm_complete.pt  250k_nn_ssm_complete.pt  25k_nn_ssm_complete.pt  MODEL.yaml  MODEL_test_speed.yaml  model.onnx  nn_ssm.pt  nn_ssm_complete.pt  nn_torch2keras.pt  nn_torch2tensor.pt  test_weights_saving.yaml
scripts/data/model.pb/: fingerprint.pb  saved_model.pb
scripts/distance/: train_distance.py  train_distance2.py
scripts/distance/100/: 250k_nn_ssm_distance.pt  nn_ssm_distance.pt  train_distance.py
scripts/distance/100-100/: 250k_nn_ssm_distance.pt  nn_ssm_distance.pt  train_distance.py
scripts/distance/100-100-100/: 500k_nn_ssm_distance.pt  nn_ssm_distance.pt  train_distance.py
scripts/distance/150-150/: 250k_nn_ssm_distance.pt  nn_ssm_distance.pt  train_distance.py
scripts/distance/150-150-150/: 500k_nn_ssm_distance.pt  nn_ssm_distance.pt  train_distance.py
scripts/distance/200-150-100/: 500k_nn_ssm_distance.pt  nn_ssm_distance.pt
scripts/distance/200-200/: 500k_nn_ssm_distance.pt  nn_ssm_distance.pt  train_distance.py
scripts/distance/50-50/: 250k_nn_ssm_distance.pt  nn_ssm_distance.pt  train_distance.py
scripts/distance/500/: 250k_nn_ssm_distance.pt  nn_ssm_distance.pt  train_distance.py
scripts/distance/500-500/: 500k_nn_ssm_distance.pt  nn_ssm_distance.pt  train_distance.py
scripts/distance/700-700/: 500k_nn_ssm_distance.pt  nn_ssm_distance.pt  train_distance.py
scripts/distance/single/: train_distance_single.py
scripts/distance/single/1000-1000/: 250k_nn_ssm_distance_single.pt  500k_nn_ssm_distance_single.pt  nn_ssm_distance_single.pt  train_distance_single.py
scripts/matlab/: fromBin2Mat.m  n_neurons_script.m  readBinDistance.m  readBinScaling.m  train.asv  train_distance.asv  train_distance.m  train_scaling.m  train_scaling_simple.asv  train_scaling_simple.m
src/: create_dataset.cpp  create_dataset2.cpp  create_dataset_connection.cpp  create_dataset_distance.cpp  create_dataset_distance_single.cpp  create_dataset_scaling_simple.cpp  prova.cpp
src/neural_network/: feedforward_nn.cpp  neural_network.cpp
src/neural_networks/: compare_speed.cpp  neural_network.cpp  nn_test.cpp  nn_test_speed.cpp
src/ssm15066_estimators/: ssm15066_estimatorNN.cpp
